Changes in version 0.1.3

- Added the option to draw samples with permanent random numbers.

Changes in version 0.1.2

- sps() now returns an integer vector (when possible), rather than a double.

- printing the matrix of replicate weights now shows row names (if any).