@@ -111,7 +111,23 @@ character(0)
 > samp[1] <- 1
 > str(samp)
  num [1:11] 1 7 6 31 10 99 100 54 60 71 ...
-> 
+>
+> # Tests for error messages
+> try(sps(-1, 1))
+Error in sps(-1, 1) : 
+  'x' must be a strictly positive and finite numeric vector
+> try(sps(1, NA))
+Error in sps(1, NA) : 'n' must be a positive and finite numeric vector
+> try(sps(1:4, 2, c(1, 1, 2, 2)))
+Error in sps(1:4, 2, c(1, 1, 2, 2)) : 
+  'n' must have a single sample size for each level in 's' (stratum)
+> try(sps(1:4, c(5, 2), c(1, 1, 2, 2)))
+Error in (function (x, n, prn = NULL)  : 
+  sample size 'n' is greater than or equal to population size
+> try(sps(1:4, 2, prn = c(0.1, 0.1, 0.1, NA)))
+Error in sps(1:4, 2, prn = c(0.1, 0.1, 0.1, NA)) : 
+  'prn' must be a numeric vector between 0 and 1
+>
 > proc.time()
    user  system elapsed 
   0.308   0.233   0.375 
